--- a/Bc2Ride/Base.lproj/Main.storyboard
+++ b/Bc2Ride/Base.lproj/Main.storyboard
@@ -371,7 +371,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" text="Even Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ib-Vz-ogD">
-                                <rect key="frame" x="20" y="383" width="560" height="45"/>
+                                <rect key="frame" x="20" y="383" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -392,10 +392,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <datePicker contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="30" translatesAutoresizingMaskIntoConstraints="NO" id="aFv-ef-cgN">
-                                <rect key="frame" x="20" y="436" width="560" height="106"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="106" id="YTI-cx-Kqj"/>
-                                </constraints>
+                                <rect key="frame" x="20" y="412" width="560" height="131"/>
                                 <date key="date" timeIntervalSinceReferenceDate="495064909.61085403">
                                     <!--2016-09-08 22:01:49 +0000-->
                                 </date>
@@ -424,40 +421,40 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pak-Ra-eko" firstAttribute="leading" secondItem="AZD-NC-oyE" secondAttribute="leading" id="3fp-VP-wtg"/>
-                            <constraint firstItem="4dM-zB-B85" firstAttribute="top" secondItem="AZD-NC-oyE" secondAttribute="bottom" constant="8" symbolic="YES" id="4L7-BW-TMD"/>
-                            <constraint firstItem="LhS-AL-NkZ" firstAttribute="top" secondItem="kQb-Pq-WfQ" secondAttribute="bottom" constant="8" symbolic="YES" id="4uH-vS-gjg"/>
-                            <constraint firstItem="tHp-go-Fb1" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="Exw-en-X6G"/>
-                            <constraint firstItem="oCf-cn-h7R" firstAttribute="top" secondItem="Gki-V7-MNm" secondAttribute="bottom" id="FId-8s-cjt"/>
-                            <constraint firstItem="4dM-zB-B85" firstAttribute="width" secondItem="pak-Ra-eko" secondAttribute="width" id="Few-eh-wAC"/>
-                            <constraint firstItem="tHp-go-Fb1" firstAttribute="leading" secondItem="kSN-1x-b68" secondAttribute="trailing" constant="4" id="Hd2-DY-Uyi"/>
-                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="top" secondItem="4dM-zB-B85" secondAttribute="bottom" constant="8" symbolic="YES" id="I4H-BC-BB7"/>
-                            <constraint firstItem="aFv-ef-cgN" firstAttribute="trailing" secondItem="tHp-go-Fb1" secondAttribute="trailing" id="IxS-uC-QXG"/>
-                            <constraint firstItem="AZD-NC-oyE" firstAttribute="width" secondItem="pak-Ra-eko" secondAttribute="width" id="Pxz-TW-hJ8"/>
-                            <constraint firstItem="AZD-NC-oyE" firstAttribute="top" secondItem="pak-Ra-eko" secondAttribute="bottom" constant="8" symbolic="YES" id="RfZ-f0-NDc"/>
-                            <constraint firstItem="AZD-NC-oyE" firstAttribute="leading" secondItem="4dM-zB-B85" secondAttribute="leading" id="Sg5-Iz-JW0"/>
-                            <constraint firstItem="pak-Ra-eko" firstAttribute="top" secondItem="oCf-cn-h7R" secondAttribute="bottom" constant="8" symbolic="YES" id="YUa-PV-49i"/>
-                            <constraint firstItem="oCf-cn-h7R" firstAttribute="trailing" secondItem="pak-Ra-eko" secondAttribute="trailing" id="ZTV-gA-3WJ"/>
-                            <constraint firstAttribute="bottom" secondItem="kSN-1x-b68" secondAttribute="bottom" constant="20" symbolic="YES" id="aXZ-tF-jic"/>
-                            <constraint firstItem="LhS-AL-NkZ" firstAttribute="leading" secondItem="9ib-Vz-ogD" secondAttribute="leading" id="b4t-sd-IMx"/>
-                            <constraint firstItem="9ib-Vz-ogD" firstAttribute="leading" secondItem="aFv-ef-cgN" secondAttribute="leading" id="bTt-Cd-9P7"/>
-                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="leading" secondItem="LhS-AL-NkZ" secondAttribute="leading" id="cLn-eK-8T2"/>
-                            <constraint firstItem="oCf-cn-h7R" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="fIu-m8-jCn"/>
-                            <constraint firstItem="kSN-1x-b68" firstAttribute="top" secondItem="aFv-ef-cgN" secondAttribute="bottom" constant="8" symbolic="YES" id="heR-Mn-mOJ"/>
-                            <constraint firstItem="kSN-1x-b68" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="kH6-nv-BjU"/>
-                            <constraint firstItem="9ib-Vz-ogD" firstAttribute="trailing" secondItem="aFv-ef-cgN" secondAttribute="trailing" id="kbb-nq-S1S"/>
-                            <constraint firstItem="LhS-AL-NkZ" firstAttribute="trailing" secondItem="9ib-Vz-ogD" secondAttribute="trailing" id="kdh-WA-luw"/>
-                            <constraint firstItem="tHp-go-Fb1" firstAttribute="leading" secondItem="kSN-1x-b68" secondAttribute="trailing" constant="4" id="m09-h6-jdv"/>
-                            <constraint firstItem="9ib-Vz-ogD" firstAttribute="top" secondItem="LhS-AL-NkZ" secondAttribute="bottom" constant="8" symbolic="YES" id="mf3-fD-2je"/>
-                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="width" secondItem="pak-Ra-eko" secondAttribute="width" id="oFt-Kc-A8R"/>
-                            <constraint firstItem="aFv-ef-cgN" firstAttribute="top" secondItem="9ib-Vz-ogD" secondAttribute="bottom" constant="8" symbolic="YES" id="pew-Uw-6HI"/>
-                            <constraint firstItem="4dM-zB-B85" firstAttribute="leading" secondItem="kQb-Pq-WfQ" secondAttribute="leading" id="sv5-ts-La5"/>
-                            <constraint firstItem="kSN-1x-b68" firstAttribute="baseline" secondItem="tHp-go-Fb1" secondAttribute="baseline" id="sxD-7s-Qbi"/>
-                            <constraint firstItem="oCf-cn-h7R" firstAttribute="leading" secondItem="pak-Ra-eko" secondAttribute="leading" id="uaD-bW-2zs"/>
-                            <constraint firstItem="tHp-go-Fb1" firstAttribute="width" secondItem="kSN-1x-b68" secondAttribute="width" id="xBs-hu-njf"/>
-                            <constraint firstItem="kSN-1x-b68" firstAttribute="leading" secondItem="aFv-ef-cgN" secondAttribute="leading" id="y3B-m5-keG"/>
-                            <constraint firstItem="oCf-cn-h7R" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="zDW-Mp-x3A"/>
-                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="trailing" secondItem="LhS-AL-NkZ" secondAttribute="trailing" id="zUJ-yz-zhq"/>
+                            <constraint firstItem="pak-Ra-eko" firstAttribute="top" secondItem="oCf-cn-h7R" secondAttribute="bottom" constant="8" id="2Gn-DK-z8X"/>
+                            <constraint firstItem="oCf-cn-h7R" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="2fu-4t-ija"/>
+                            <constraint firstItem="AZD-NC-oyE" firstAttribute="top" secondItem="pak-Ra-eko" secondAttribute="bottom" constant="8" id="2km-5y-PeA"/>
+                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="4Qw-LR-KAG"/>
+                            <constraint firstItem="LhS-AL-NkZ" firstAttribute="top" secondItem="kQb-Pq-WfQ" secondAttribute="bottom" constant="8" id="AsC-VE-vBb"/>
+                            <constraint firstItem="aFv-ef-cgN" firstAttribute="trailing" secondItem="9ib-Vz-ogD" secondAttribute="trailing" id="CZy-uC-Qqr"/>
+                            <constraint firstItem="kSN-1x-b68" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="Crt-kh-Cxm"/>
+                            <constraint firstItem="pak-Ra-eko" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="EaD-3Q-XKX"/>
+                            <constraint firstItem="LhS-AL-NkZ" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="ISs-mU-RJd"/>
+                            <constraint firstItem="oCf-cn-h7R" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="Joo-Wc-OgU"/>
+                            <constraint firstItem="aFv-ef-cgN" firstAttribute="top" secondItem="9ib-Vz-ogD" secondAttribute="bottom" constant="8" symbolic="YES" id="KZ7-K9-VLx"/>
+                            <constraint firstItem="4dM-zB-B85" firstAttribute="height" secondItem="pak-Ra-eko" secondAttribute="height" id="Q22-pc-6zZ"/>
+                            <constraint firstItem="oCf-cn-h7R" firstAttribute="top" secondItem="Gki-V7-MNm" secondAttribute="bottom" id="SLO-nq-gP2"/>
+                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="top" secondItem="4dM-zB-B85" secondAttribute="bottom" constant="8" id="Z43-oR-JOh"/>
+                            <constraint firstItem="aFv-ef-cgN" firstAttribute="leading" secondItem="9ib-Vz-ogD" secondAttribute="leading" id="a5X-O8-Ga4"/>
+                            <constraint firstItem="AZD-NC-oyE" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="au9-Tj-5cf"/>
+                            <constraint firstItem="tHp-go-Fb1" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="buI-qX-Ska"/>
+                            <constraint firstItem="kSN-1x-b68" firstAttribute="top" secondItem="aFv-ef-cgN" secondAttribute="bottom" constant="7" id="cpJ-kT-I2T"/>
+                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="dX3-8i-p96"/>
+                            <constraint firstItem="4dM-zB-B85" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="g5W-BA-krA"/>
+                            <constraint firstItem="9ib-Vz-ogD" firstAttribute="top" secondItem="LhS-AL-NkZ" secondAttribute="bottom" constant="8" id="gN8-VI-dvs"/>
+                            <constraint firstItem="kQb-Pq-WfQ" firstAttribute="height" secondItem="pak-Ra-eko" secondAttribute="height" id="iM7-w8-TYZ"/>
+                            <constraint firstItem="LhS-AL-NkZ" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="iS9-vd-2oV"/>
+                            <constraint firstItem="AZD-NC-oyE" firstAttribute="height" secondItem="pak-Ra-eko" secondAttribute="height" id="kbI-GR-Ggl"/>
+                            <constraint firstItem="4dM-zB-B85" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="lIc-ea-z0L"/>
+                            <constraint firstItem="tHp-go-Fb1" firstAttribute="leading" secondItem="kSN-1x-b68" secondAttribute="trailing" constant="4" id="mYd-fR-GXG"/>
+                            <constraint firstItem="hFo-MR-0co" firstAttribute="top" secondItem="kSN-1x-b68" secondAttribute="bottom" constant="20" id="mxy-rV-P9c"/>
+                            <constraint firstItem="tHp-go-Fb1" firstAttribute="width" secondItem="kSN-1x-b68" secondAttribute="width" id="n7N-MG-kIQ"/>
+                            <constraint firstItem="9ib-Vz-ogD" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="odY-3V-vip"/>
+                            <constraint firstItem="4dM-zB-B85" firstAttribute="top" secondItem="AZD-NC-oyE" secondAttribute="bottom" constant="8" id="pN0-iV-qW8"/>
+                            <constraint firstItem="AZD-NC-oyE" firstAttribute="trailing" secondItem="rJA-zg-KHv" secondAttribute="trailingMargin" id="pPQ-9m-UE9"/>
+                            <constraint firstItem="pak-Ra-eko" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="uAy-6H-LVH"/>
+                            <constraint firstItem="hFo-MR-0co" firstAttribute="top" secondItem="tHp-go-Fb1" secondAttribute="bottom" constant="20" id="uJQ-HQ-dLO"/>
+                            <constraint firstItem="9ib-Vz-ogD" firstAttribute="leading" secondItem="rJA-zg-KHv" secondAttribute="leadingMargin" id="z3T-PM-tUM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1005,6 +1002,7 @@ where to wait for you?</string>
                     </view>
                     <connections>
                         <outlet property="carInfo" destination="6Ov-K5-cpG" id="lkl-uY-DuB"/>
+                        <outlet property="carName" destination="uke-I3-ky0" id="EYN-dS-FcM"/>
                         <outlet property="name" destination="YbI-wb-Yl6" id="0kk-Qo-d2B"/>
                         <outlet property="phoneNumber" destination="jiq-Ng-00i" id="I2A-6R-tcU"/>
                     </connections>
@@ -1015,8 +1013,8 @@ where to wait for you?</string>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Jn8-RS-hEs"/>
+        <segue reference="uff-IY-Yng"/>
         <segue reference="PCH-6k-Rm3"/>
-        <segue reference="CXe-Fw-BtG"/>
+        <segue reference="Aws-qW-CzL"/>
     </inferredMetricsTieBreakers>
 </document>
