--- a/Bc2Ride/Base.lproj/Main.storyboard
+++ b/Bc2Ride/Base.lproj/Main.storyboard
@@ -1013,7 +1013,7 @@ where to wait for you?</string>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="uff-IY-Yng"/>
+        <segue reference="Jn8-RS-hEs"/>
         <segue reference="PCH-6k-Rm3"/>
         <segue reference="Aws-qW-CzL"/>
     </inferredMetricsTieBreakers>
